# torch2exe

./: .gitignore  CMakeLists.model.txt  CMakeLists.txt  README.md
config/: car-yolov5m6.json  car-yolov5m6_1280x704.json  car-yolov5m6_v2_1280x704.json  opi-yolov5m6.json  person_car_yolov5m6.json  uavdet.json  uavdet_lite.json  yolov5s6_ppocr.json  yolox_m_ppocr.json
config/YOLOX/: yolox_l.json  yolox_m.json  yolox_s.json  yolox_tiny.json  yolox_x.json
config/YOLOv5-v6.0/: yolov5l.json  yolov5l6.json  yolov5m.json  yolov5m6.json  yolov5m6_1280x704.json  yolov5n.json  yolov5n6.json  yolov5s.json  yolov5s6.json  yolov5x.json  yolov5x6.json
doc/: README.md  YOLOX.md  YOLOv5.md
model/: CMakeLists.txt
src/: algorithm.cpp  algorithm.h  algorithmExt.h  logo.h  nnEngine.cpp  nnEngine.h  operator.h
src/detectors/: detector.cpp  detector.h  nms.cpp  nms.h
src/detectors/yolov5/: yolov5.cpp  yolov5.h
src/detectors/yolox/: uavdet.cpp  uavdet.h  yolox.cpp  yolox.h
src/ocrs/paddleocr/: ocr_rec.cpp  paddleocr.cpp  utility.cpp
src/ocrs/paddleocr/include/: ocr_rec.h  paddleocr.h
src/operators/: add.cpp  add.h  batchnorm2d.cpp  batchnorm2d.h  cat.cpp  cat.h  conv2d.cpp  conv2d.h  copy.cpp  copy.h  input.cpp  input.h  maxpool2d.cpp  maxpool2d.h  nnpp.cu  nnpp.h  output.cpp  output.h  permute.cpp  permute.h  relu.cpp  relu.h  resize.cu  resize.h  sigmoid.cpp  sigmoid.h  silu.cpp  silu.h  slice.cpp  slice.h  split.cpp  split.h  transpose.cpp  transpose.h  upsample.cpp  upsample.h  view.cpp  view.h  yolov5.cpp  yolov5.h  (+2 more)
src/operators/plugins/: common.h  yolov5Plugin.cu  yolov5Plugin.h  yoloxPlugin.cu  yoloxPlugin.h
src/utils/: algorithmFactory.cpp  algorithmFactory.h  configurer.cpp  configurer.h  cuda.cpp  cuda.h  deleter.cpp  deleter.h  logger.cpp  logger.h  shape.cpp  shape.h
test/: CMakeLists.txt  main.cpp
tools/: .gitignore  README.md  car_yolov5m6  car_yolov5m6.graph  car_yolov5m6_v2  car_yolov5m6_v2.graph  getest.py  geuavdet.py  gexporter.py  geyolov5.bat  geyolov5.py  geyolov5_custom.bat  geyolox.bat  geyolox.py  logo.py  ops.txt  optsize.py  torchops.py  yolov5m6  yolov5m6.graph  yolox_m  yolox_m.graph
tools/torchviz/: dot.py
