file(GLOB dirs LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_LIST_DIR} *)
list(REMOVE_ITEM dirs CMakeLists.txt)
foreach(model ${dirs})
	file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/${model}/*.cpp)
	add_library(${model} SHARED ${SOURCE_FILES})
	install(TARGETS ${model} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/model)
endforeach()